# Simple-Cyclic-Cellular-Automata

./: .gitignore  README.md  cyclic-cellular-automata.cabal  stack.yaml
app/: Main.hs
src/: CCA.hs  Lib.hs
src/CCA/: Automata.hs  Draw.hs  Types.hs
test/: Test.hs
