name:                   cyclic-cellular-automata
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/cyclic-cellular-automata#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2021 Author name here
category:               Data
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

flag llvm-cpu
  description:          Enable the LLVM backend for multicore CPUs
  default:              True

flag llvm-ptx
  description:          Enable the LLVM backend for NVIDIA CUDA GPUs
  default:              True

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  exposed-modules:
        Lib
        CCA
  
  other-modules:
        CCA.Automata
        CCA.Draw
        CCA.Types

  build-depends:
        base                        >= 4.7 && < 5
      , accelerate                  >= 1.0
      , accelerate-fft                  >= 1.3
      , colour-accelerate               >= 0.1
      , fclabels                        >= 2.0
      , gloss                           >= 1.7
      , gloss-accelerate                >= 2.0
      , mwc-random                      >= 0.8
      , mwc-random-accelerate           >= 0.1
      
  ghc-options:
      -Wall
      -fno-warn-type-defaults

executable cyclic-cellular-automata-exe
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs

  build-depends:
        base
      , cyclic-cellular-automata
      , accelerate
      , accelerate-fft                  >= 1.3
      , colour-accelerate               >= 0.1
      , fclabels                        >= 2.0
      , gloss                           >= 1.7
      , gloss-accelerate                >= 2.0
      , mwc-random                      >= 0.8
      , mwc-random-accelerate           >= 0.1

  ghc-options:
      -Wall
      -fno-warn-type-defaults
      -O2
      -threaded
      -rtsopts

  if flag(llvm-cpu)
    cpp-options:
        -DACCELERATE_LLVM_NATIVE_BACKEND

    build-depends:
        accelerate-llvm-native      >= 1.0

  if flag(llvm-ptx)
    cpp-options:
        -DACCELERATE_LLVM_PTX_BACKEND

    build-depends:
        accelerate-llvm-ptx         >= 1.0

test-suite cyclic-cellular-automata-test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Test.hs

  build-depends:
        base
      , cyclic-cellular-automata

  ghc-options:
      -O2
      -threaded
      -rtsopts

source-repository head
  type:     git
  location: https://github.com/unaimillan/cyclic-cellular-automata

-- vim: nospell
